Bug# 227888 is fixed . File size limit cannot be more than Disk Space quota. Some multi volume defects are also checked in
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6951 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/admin/iFolderAdmin.resx
+++ b/simias/src/admin/iFolderAdmin.resx
@@ -261,6 +261,9 @@
 	<data name="ERRORINVALIDFILESIZE">
 		<value>An invalid file size limit value was specified. Value must be between 1 and 2e+063 - 1.</value>
 	</data>
+	<data name="ERRORINVALIDLIMIT">
+                <value>An invalid file size limit value was specified. Value must be lesser than Disk Space Quota.</value>
+        </data>
 	<data name="ERRORINVALIDQUOTA">
 		<value>An invalid disk space quota value was specified. Value must be between 1 and 2e+063 - 1.</value>
 	</data>
