Added files AddDataPath.aspx and AddDataPath.aspx.cs in MakeFile.am
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6962 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/admin/iFolderAdmin.resx
+++ b/simias/src/admin/iFolderAdmin.resx
@@ -885,4 +885,7 @@
 	<data name="NOTMOUNTED">
 		<value>Not Mounted</value>
 	</data>
+	<data name="LINKALREADYEXISTS">
+                <value>A Link by this name already Exists</value>
+        </data>
 </root>
