Bug # 298687 . If Full Path does not exists then it throws a message that full path does not exists.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6971 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/admin/iFolderAdmin.resx
+++ b/simias/src/admin/iFolderAdmin.resx
@@ -888,4 +888,7 @@
 	<data name="LINKALREADYEXISTS">
                 <value>A Link by this name already Exists</value>
         </data>
+	 <data name="INVALIDFULLPATH">
+                <value>Full Path specified is invalid, please check and re-enter.</value>
+        </data>
 </root>
