Bug# 298692 Changed the owner of folder to wwwrun
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6973 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/admin/iFolderAdmin.resx
+++ b/simias/src/admin/iFolderAdmin.resx
@@ -513,6 +513,10 @@
 	<data name="LOGINLOSTSESSION">
 		<value>Your session has been closed. Please log in.</value>
 	</data>
+	<data name="CANNOTSETPERMISSION">
+                <value>Could not change the permission of the Full Path specified.</value>
+        </data>
+
 	<data name="LOGINNOCOOKIES">
 		<value>You must enable cookies in your browser.</value>
 	</data>
