The error msg has been modified in the ifolderadmin.resx file and assigned to localisation team
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@7027 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/src/admin/iFolderAdmin.resx
+++ b/src/admin/iFolderAdmin.resx
@@ -306,6 +306,9 @@
 	<data name="ERRORINVALIDSYNCINTERVAL">
 		<value>An invalid synchronization interval was specified. Value must be between 5 and 999.</value>
 	</data>
+	<data name="ERRORINVALIDIDSYNCINTERVAL">
+		<value>An invalid synchronisation interval was specified. Value must be between 5 and 10080.</value>
+	</data>
 	<data name="ERRORLOCKEXCEPTION">
 		<value>The operation was cancelled because the iFolder has been locked/disabled by the administrator.</value>
 	</data>
