changes for password change and users full name display order setting features
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@7041 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/src/admin/iFolderAdmin.resx
+++ b/src/admin/iFolderAdmin.resx
@@ -399,6 +399,12 @@
 	<data name="FULLNAMETAG">
 		<value>Full Name:</value>
 	</data>
+	<data name="FULLNAMEDISLAYTAG">
+		<value>Name Display:</value>
+	</data>
+	<data name="FULLNAMEDISPLAYORDER">
+		<value>Full Name Display Order:</value>
+	</data>
 	<data name="GB">
 		<value>GB</value>
 	</data>
