small changes done for continuing multi-level admin feature and one string added for password change message
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@7092 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/src/webaccess/iFolderWeb.resx
+++ b/src/webaccess/iFolderWeb.resx
@@ -685,7 +685,7 @@
         <value>Filter:</value>
     </data>
     <data name="PASSWORDCHANGESUCCESS">
-        <value>Password Changed Successfully.</value>
+        <value>Password Changed Successfully. Login with new password.</value>
     </data>
     <data name="PASSWORDCHANGEFAILED">
         <value>Could not change password, </value>
